<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/image_item"
            android:title="@string/image"
            android:icon="@drawable/ic_image"/>

        <item
            android:id="@+id/video_item"
            android:title="@string/video"
            android:icon="@drawable/ic_video"/>

        <item
            android:id="@+id/item_download"
            android:title="@string/download"
            android:icon="@drawable/ic_download"/>

        <item
            android:id="@+id/share_app"
            android:title="@string/share_app"
            android:icon="@drawable/ic_share"/>

        <item
            android:id="@+id/rate_app"
            android:title="@string/rate_app"
            android:icon="@drawable/ic_rate"/>
    </group>

</menu>